--- a/styles/globals.css
+++ b/styles/globals.css
@@ -18,6 +18,19 @@
     scrollbar-width: none; /* Firefox */
   }
 }
+
+/* html {
+  width: 100%;
+  height: 100%;
+  background: rgb(8, 84, 103);
+  background: linear-gradient(
+    180deg,
+    rgb(8, 84, 103) 0%,
+    rgba(175, 167, 187, 1) 50%,
+    rgba(244, 192, 179, 1) 100%
+  );
+} */
+
 body,
 html {
   height: 100%;
